Agregada card de partidos en vivo
